# oracle.omen

./: .gitignore  CHANGELOG.md  CYCLE_LOG.md  Cargo.toml  README.md  RELEASE.md
.claude/: settings.local.json
.github/workflows/: ci.yml
crates/oracle_omen_cli/: Cargo.toml
crates/oracle_omen_cli/src/: commands.rs  lib.rs  main.rs  output.rs
crates/oracle_omen_core/: Cargo.toml
crates/oracle_omen_core/src/: capability.rs  error.rs  event.rs  hash.rs  lib.rs  replay.rs  serde_utils.rs  state.rs  time.rs  tool.rs
crates/oracle_omen_memory/: Cargo.toml
crates/oracle_omen_memory/src/: document.rs  lib.rs  provenance.rs  query.rs  store.rs
crates/oracle_omen_patches/: Cargo.toml
crates/oracle_omen_patches/src/: apply.rs  gate.rs  lib.rs  patch.rs  signature.rs  store.rs
crates/oracle_omen_plan/: Cargo.toml
crates/oracle_omen_plan/src/: compiler.rs  dag.rs  dsl.rs  lib.rs  validate.rs
crates/oracle_omen_policy/: Cargo.toml
crates/oracle_omen_policy/src/: compiler.rs  engine.rs  lang.rs  lib.rs  schema.rs
crates/oracle_omen_runtime/: Cargo.toml
crates/oracle_omen_runtime/src/: capabilities.rs  executor.rs  lib.rs  scheduler.rs  tools.rs
crates/oracle_omen_wasm/: Cargo.toml
crates/oracle_omen_wasm/src/: compile.rs  host.rs  lib.rs  limits.rs  sandbox.rs
docs/: ARCHITECTURE.md  AUDIT_GUIDE.md  CAPABILITIES.md  CLI.md  DETERMINISM.md  EVENT_LOG.md  FAILURE_MODES.md  MEMORY.md  PATCHES.md  PLANNING.md  POLICY.md  RELEASE_NOTES_0.1.0.md  REPLAY.md  SECURITY.md  TESTING.md  TOOLS.md  WASM.md
examples/: echo_agent.rs  memory_example.rs  patch_example.rs  plan_example.rs  policy_example.rs  replay_example.rs  tool_example.rs  wasm_example.rs
