[workspace]
resolver = "2"
members = [
    "crates/oracle_omen_core",
    "crates/oracle_omen_plan",
    "crates/oracle_omen_runtime",
    "crates/oracle_omen_memory",
    "crates/oracle_omen_policy",
    "crates/oracle_omen_patches",
    "crates/oracle_omen_wasm",
    "crates/oracle_omen_cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "GPL-3.0"
authors = ["Oracle Omen Contributors"]
repository = "https://github.com/staticpayload/oracle.omen"

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.12"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Cryptographic hashing (stable)
blake3 = "1.5"

# CRDT for memory
delta = "0.5"

# Async runtime (optional, used conditionally)
tokio = { version = "1.42", features = ["sync", "rt"], optional = true }

# CLI
clap = { version = "4.5", features = ["derive"] }
console = "0.15"

# Testing
proptest = "1.5"

[workspace.metadata.determinism]
# Enforce determinism guarantees
canonical-serialization = "strict"
unordered-iteration = "forbidden"
implicit-time = "forbidden"
unseeded-random = "forbidden"
