[package]
name = "oracle_omen_core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Core types and abstractions for oracle.omen deterministic agent framework"
keywords = ["deterministic", "agent", "event-sourcing", "audit", "replay"]
categories = ["development-tools", "data-structures"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
thiserror = { workspace = true }
blake3 = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
