[package]
name = "oracle_omen_runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
oracle_omen_core = { path = "../oracle_omen_core" }
oracle_omen_plan = { path = "../oracle_omen_plan" }
oracle_omen_memory = { path = "../oracle_omen_memory" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt-multi-thread", "time", "macros"] }
async-trait = "0.1"

[dev-dependencies]
proptest = { workspace = true }
