[package]
name = "oracle_omen_wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
oracle_omen_core = { path = "../oracle_omen_core", version = "0.1" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
wasmi = "0.35"
wat = "1.212"

[dev-dependencies]
proptest = { workspace = true }
